<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_name"
        android:hint="@string/editTextHingName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_text_status"
        android:hint="@string/editTextHingStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_text_email"
        android:hint="@string/editTextHingEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_text_phone"
        android:hint="@string/editTextHingPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>