<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/login_image_shape" />

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tsa.EventMe.LoginActivity"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white_text"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"

            />
        <EditText
            android:id="@+id/email"
            android:textColor="@color/white_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/grey_hint"/>

        <EditText
            android:id="@+id/password"
            android:textColor="@color/white_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColorHint="@color/grey_hint"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:id="@+id/sign_in_button"
            android:background="@drawable/button_shape"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>


