<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:background="@drawable/login_image_shape" />

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/my_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.tsa.EventMe.SignupActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="20dp"
            android:text="@string/appName"
            android:textColor="@color/white_text"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey_hint" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_shape"
            android:text="@string/register"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/btn_link_to_login"
            android:textColorHint="@color/grey_hint" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sign_in_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:onClick="login"
                android:src="@drawable/at" />

            <ImageView
                android:id="@+id/myButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:onClick="signIn"
                android:src="@drawable/google" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logOut"
            android:text="Log out"
            android:visibility="gone" />


    </LinearLayout>


</RelativeLayout>
