<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test"
                    android:contentDescription="@string/profile_image_description"
                    app:layout_collapseMode="parallax"
                    android:id="@+id/person_image"/>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding = "16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_status"
                android:textColor="@color/grey_hint"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/user_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_status"
                android:textColor="@color/black_text"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textSize="15sp"
                android:textColor="@color/grey_hint"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_phone_number"
                android:textSize="15sp"
                android:textColor="@color/grey_hint"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_phone_number"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:layout_marginStart="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_events"
                    android:textSize="20sp"
                    android:textColor="@color/black_text"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/user_number_of_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/black_text"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/post_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_notifications"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>