<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator2"
    tools:context="com.tsa.EventMe.CreateEvent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/createEventTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="bottom"
                android:hint="@string/createEventTopic"
                android:paddingTop="20dp"
                />

            <EditText
                android:id="@+id/createEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="bottom"
                android:hint="@string/createEventDescription"
                android:paddingTop="20dp"
                />
            <EditText
                android:id="@+id/createEventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="bottom"
                android:hint="@string/createEventLocation"
                android:paddingTop="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:id="@+id/creatingImage"
                android:contentDescription="Event photo"
                android:paddingTop="20dp"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorPrimary"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="5dp"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:onClick="createEvent"
        app:layout_anchor="@id/bottom_app_bar"

        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
